# PicoBot

./: compose.yaml
gui/: Dockerfile  notes.txt
kuka_arm/: Dockerfile
py_gui/: Dockerfile
py_gui/picobot_gui/: CMakeLists.txt  package.xml
py_gui/picobot_gui/src/: config.py  gui.py  main.py  robot_cam_gui.py  styles.py  test.py
ros2_main/: Dockerfile
ros2_main/src/picobot_control/: CMakeLists.txt  README.md  package.xml
ros2_main/src/picobot_control/cfg/: ForceZ.cfg  filters_on_camera_param.yaml
ros2_main/src/picobot_control/launch/: cam_viz.launch.py  filters_on_camera.launch.py  force_controller.launch.py  get_wrench.launch.py  get_wrench_sim.launch.py  init_robot_motion.launch.py  one_in_all.launch.py  read_bag.launch.py  record_bag.launch.py  send_target_pose.launch.py  terasmart_launch.launch.py
ros2_main/src/picobot_control/scripts/: read_bag.py  record_bag.py  sensor_grav_comp.py
ros2_main/src/picobot_control/src/: eye_in_hand_raster.cpp  force_controller.cpp  get_wrench_base_sim.cpp
ros2_main/src/roi_detection/: CMakeLists.txt  README.md  package.xml
ros2_main/src/roi_detection/scripts/: grn_mrkr_cropbox.py  weighted_avg_normals.py
